[package]
name = "igl-nano"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Minimal WASM core for maximum performance"

[lib]
crate-type = ["cdylib"]  # Оставляем только cdylib для WASM

[profile.release]
opt-level = 'z'  # Максимальная оптимизация
panic = 'abort'   # Минимизация размера

[profile.dev]
opt-level = 0     # Для отладки